force-app/main/default/objects/Contact/fields/CelularInternacional__c.field-meta.xml
<CustomField>
    <fullName>CelularInternacional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de controle para evitar validações e máscaras de números nacionais para números de celular internacionais informados.</description>
    <label>Celular internacional</label>
    <type>Checkbox</type>
</CustomField>