force-app/main/default/objects/Contact/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <inlineHelpText>Informe o CPF ou CNPJ</inlineHelpText>
    <label>Documento</label>
    <length>19</length>
    <type>Text</type>
</CustomField>