force-app/main/default/objects/Contact/fields/TipoContato__c.field-meta.xml
<CustomField>
    <fullName>TipoContato__c</fullName>
    <label>Tipo do contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contato direto</fullName>
            </value>
            <value>
                <fullName>Representante financeiro</fullName>
            </value>
            <value>
                <fullName>Representante legal</fullName>
            </value>
            <value>
                <fullName>Sócio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>